Inizio modifiche a Hotel.

--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -125,40 +125,40 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACa
-        CAAAAk1TRnQBSQFMAgEBAgEAAbwBAQG8AQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBQQFCAf8BqgEyATMB/wGkAS8BMAH/AZ8BLAEtAf8BmgIq
-        Af8BlAInAf8BjwIkAf8BiQIhAf8BgwIeAf8BVQEYARkB/wFVARgBGQH/AU8CFgH/AUsBEwEUAf/IAAHP
-        AUgBSQH/AfMBjgGPAf8B5gGAAYEB/wGqASEBAQH/ASQBDwEAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
-        Af8BzgHIAcQB/wEzASoBJQH/AZ4BGwEQAf8BnAEaARMB/wGYARYBDgH/AU8CFgH/JAADNgFZAkcBRgGB
-        AxABFZgAAdEBTAFNAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AU4BOAEoAf8BJAEZAREB/wGNAVUBRQH/
-        Ae0B4AHYAf8B8QHnAeAB/wGPAVwBUAH/AaMBHgESAf8BogEfARkB/wGcARoBEgH/AVUBGAEZAf8kAAMs
-        AUMBewFWAU0B+gF3AWoBRwH5Ay8BSpQAAdQBUgFTAv8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AU4BOAEo
-        Af8DAAH/ASQBGQERAf8B6QHZAc4B/wHsAd0B1AH/AYUBUQFEAf8BrgEoASAB/wGqASYBIQH/AaMBHwEZ
-        Af8BWgIbAf8kAAMYASIDOAFcAasBfwFPAf4CYgFJAfYDAAEBkAAB1wFYAVkC/wGpAaoB/wH7AZ8BoAH/
-        AfUBkwGUAf8BTgE4ASgB/wFOATgBKAH/AU4BOAEoAf8BTgE4ASgB/wFTAT8BLwH/AVoBRwE4Af8BugEz
-        ATEB/wGyASwBKQH/AaoBJgEhAf8BgwIeAf8sAAJcAVgB0QGrAX8BVAH+Az8BbZAAAdsBgwGEAv8BswG0
-        Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGAAYEB/wHfAVYBVwH/AdcBTgFPAf8B0QFI
-        AUkB/wHBAToBOQH/AboBMwExAf8BsgEtASkB/wGJAiEB/xwAAwcBCQwAAy4BRwF9AVEBKwH8AaoBfwFm
-        Af4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAUABPQH/AcQBOwEzAf8BvgE1ASgB/wG4AS8BHAH/
-        AbMBKgERAf8BrQEkAQUB/wGnAR4BAAH/AaEBGAEAAf8BwQE6ATkB/wG6ATMBMQH/AY8CJAH/DAAB4wFV
-        AR8B/wHWAU8BHQH/AccBRgEXAf8BtgE8AREB/wGtATcBDgH/AZUBKQEFAf8IAAMYASIBfwFpAT0B/gGr
-        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAFDAUQJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
-        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhARgBAAH/AcIBOgE5Af8BlAInAf8MAAHlAYMBLwH/Ad8BUAET
-        Af8B6gGCASYB/wHzAZoBRwH/AeIBjAE+Af8DJgE5CAADBAEFAagCQAH9AmIBSQH2A1YBtIwAAeUBlwGY
-        Av8BvQG+Af8B0wFKAUsN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/AeUB0QHGAf8BpwEe
-        AQAB/wHMAkQB/wGaAioB/wwAAeYBjgE/Af8B7AGCASgB/wHzAY0BOAH/AewBnAFTAf8BVgJUAasDKgFB
-        CAADAgEDAYEBXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcAVMBVBH/AfsB+AH2Af8B9gHu
-        AeoB/wHwAeUB3gH/AeoB2wHSAf8BrQEkAQUB/wHXAU4BTwH/AZ8BLAEtAf8MAAHnAZkBUAH/AfMBmgFH
-        Af8B9AGcAU4B/wNfAegBqAJAAf0BawFcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHt
-        AaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEqAREB/wHfAVYBVwH/
-        AaQBLwEwAf8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAYsBbgFiAfwBogF/AV4B/gHHAU0BIgH/AXECTQH6
-        A1kBxwJhAVsB4QFpATEBKwH8AYEBagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2
-        Af8B9gHuAeoB/wG4AS8BHAH/AUQCEAH/AaoBMgEzAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgGNAXYBXwH7
-        A2QB7AGDAV8BRAH7AXEBNwErAfwBbQFgAVEB9wJkAVMB8QNkAewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4
-        AZIBkx3/AfsB+AH2Af8BvgE1ASgB/wGwATUBNgH/AbABNQE2Af8cAANXAbgBiQFtAWEB/ANkAecDXwHj
+        CAAAAk1TRnQBSQFMAgEBAgEAAcwBAQHMAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBPwFAAf8BqgEwATEB/wGkAS0BLgH/AZ8BKgErAf8BmgIo
+        Af8BlAIlAf8BjwIiAf8BiQIfAf8BgwIcAf8BUwEWARcB/wFTARYBFwH/AU0CFAH/AUkBEQESAf/IAAHP
+        AUYBRwH/AfMBjgGPAf8B5gGAAYEB/wGqAR8BAAH/ASIBDQEAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
+        Af8BzgHIAcQB/wExASgBIwH/AZ4BGQEOAf8BnAEYAREB/wGYARQBDAH/AU0CFAH/JAADNgFZAkcBRgGB
+        AxABFZgAAdEBSgFLAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AUwBNgEmAf8BIgEXAQ8B/wGNAVMBQwH/
+        Ae0B4AHYAf8B8QHnAeAB/wGPAVoBTgH/AaMBHAEQAf8BogEdARcB/wGcARgBEAH/AVMBFgEXAf8kAAMs
+        AUMBeQFTAU0B+gFxAWoBRwH5Ay8BSpQAAdQBUAFRAv8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AUwBNgEm
+        Af8DAAH/ASIBFwEPAf8B6QHZAc4B/wHsAd0B1AH/AYUBTwFCAf8BrgEmAR4B/wGqASQBHwH/AaMBHQEX
+        Af8BWAIZAf8kAAMYASIDOAFcAacBfwFPAf4CYgFJAfYDAAEBkAAB1wFWAVcC/wGpAaoB/wH7AZ8BoAH/
+        AfUBkwGUAf8BTAE2ASYB/wFMATYBJgH/AUwBNgEmAf8BTAE2ASYB/wFRAT0BLQH/AVgBRQE2Af8BugEx
+        AS8B/wGyASoBJwH/AaoBJAEfAf8BgwIcAf8sAAJcAVgB0QGnAX8BVAH+Az8BbZAAAdsBgwGEAv8BswG0
+        Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGAAYEB/wHfAVQBVQH/AdcBTAFNAf8B0QFG
+        AUcB/wHBATgBNwH/AboBMQEvAf8BsgErAScB/wGJAh8B/xwAAwcBCQwAAy4BRwF7AU0BKwH8AaYBfwFm
+        Af4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAT4BOwH/AcQBOQExAf8BvgEzASYB/wG4AS0BGgH/
+        AbMBKAEPAf8BrQEiAQMB/wGnARwBAAH/AaEBFgEAAf8BwQE4ATcB/wG6ATEBLwH/AY8CIgH/DAAB4wFT
+        AR0B/wHWAU0BGwH/AccBRAEVAf8BtgE6AQ8B/wGtATUBDAH/AZUBJwEDAf8IAAMYASIBfwFpAT0B/gGp
+        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAFBAUIJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
+        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhARYBAAH/AcIBOAE3Af8BlAIlAf8MAAHlAYMBLQH/Ad8BTgER
+        Af8B6gGCASQB/wHzAZoBRQH/AeIBjAE8Af8DJgE5CAADBAEFAagCQAH9AmIBSQH2A1YBtIwAAeUBlwGY
+        Av8BvQG+Af8B0wFIAUkN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/AeUB0QHGAf8BpwEc
+        AQAB/wHMAkIB/wGaAigB/wwAAeYBjgE9Af8B7AGCASYB/wHzAY0BNgH/AewBnAFRAf8BVgJUAasDKgFB
+        CAADAgEDAX8BXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcAVEBUhH/AfsB+AH2Af8B9gHu
+        AeoB/wHwAeUB3gH/AeoB2wHSAf8BrQEiAQMB/wHXAUwBTQH/AZ8BKgErAf8MAAHnAZkBTgH/AfMBmgFF
+        Af8B9AGcAUwB/wNfAegBqAJAAf0BZwFcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHt
+        AaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEoAQ8B/wHfAVQBVQH/
+        AaQBLQEuAf8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAYUBbAFgAfwBngF/AV4B/gHHAUsBIAH/AW8CTQH6
+        A1kBxwJhAVsB4QFnAS8BKwH8AX8BagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2
+        Af8B9gHuAeoB/wG4AS0BGgH/AUICDgH/AaoBMAExAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgGLAXABXwH7
+        A2QB7AGBAV8BRAH7AW8BNQErAfwBbQFgAVEB9wJkAVMB8QNkAewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4
+        AZIBkx3/AfsB+AH2Af8BvgEzASYB/wGwATMBNAH/AbABMwE0Af8cAANXAbgBgwFrAV8B/ANkAecDXwHj
         A2EB3ANfAeMDZwHyAxMBGowAAfUBtgG3Af8B9QG2AbcB/wHzAbIBswH/AfEBrQGuAf8B7gGnAagB/wHq
-        AaEBogH/AecBmgGbAf8B5AGTAZQB/wHgAY4BjwH/Ad0BhwGIAf8B2gGAAYEB/wHWAVcBWAH/AdMBUQFS
-        Af8B0QFMAU0B/yAAAzgBXANXAbgDYQHiA1sBxANOAZQDEwEa/wCNAAFCAU0BPgcAAT4DAAEoAwABQAMA
+        AaEBogH/AecBmgGbAf8B5AGTAZQB/wHgAY4BjwH/Ad0BhwGIAf8B2gGAAYEB/wHWAVUBVgH/AdMBTwFQ
+        Af8B0QFKAUsB/yAAAzgBXANXAbgDYQHiA1sBxANOAZQDEwEa/wCNAAFCAU0BPgcAAT4DAAEoAwABQAMA
         ARADAAEBAQABAQUAAYAXAAP/AQAE/wQAAYABAQL/BAABgAEBAf8BHwQAAYABAQH/AQ8EAAGAAQEB/wEH
         BAABgAEBAf8BxwQAAYABAQH9AcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAFD
         BAABgAEBAYABAwQAAYABAQHIAQMEAAGAAQEB/AEDBAABgAEBAf4BBwQABP8EAAs=
@@ -4537,6 +4537,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
