Inserimento tassa soggiorno nei documenti.

--- a/Codice/Form/Hospitality/Opzioni.resx
+++ b/Codice/Form/Hospitality/Opzioni.resx
@@ -321,6 +321,12 @@
   <metadata name="GroupBox9.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="txtDescrizioneTassaSogg.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label54.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ckbApplicaTassaRagazzi.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -762,16 +768,16 @@ Questo permette in caso di necessita’ di spostare programma, archivi aggiornat
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
-        BAAAAk1TRnQBSQFMAwEBAAG8AQEBvAEBARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        BAAAAk1TRnQBSQFMAwEBAAHEAQEBxAEBARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
         ARADAAEBAQABIAYAARAaAAPAAf8D1wH/A90B/wPdAf8D3QH/A90B/wPXAf8D1wH/A9cB/wPXAf8D3QH/
         A7IB/8wAA9cB/wGkAqAB/wPqEf8D8QH/A/EB/wPxAf8D8QH/A+oB/wGkAqAB/wPMAf/EAAPAAf8DzAH/
-        A9cB/wPXFf8D8QH/A/EB/wPxAf8D1wH/A9cB/wPMAf8DwAH/wAADmQH/A/EB/wPMAf8DQAH/A7IB/wPA
-        Af8DwAH/A8AB/wPAAf8DwAH/A8AB/wOyAf8DQAH/A8wB/wPxAf8BpAKgAf/AAAOZAf8D1wH/A8AB/wMo
-        Af8DLwH/A0AB/wNAAf8DQAH/A0AB/wNAAf8DQAH/A0AB/wMoAf8DsgH/A9cB/wGkAqAB/8AAA5YB/wPA
-        Af8DwAH/A8wB/wHMApkB/wHMApkC/wGZAS8C/wGZAS8C/wGZAS8C/wGZAS8B/wHMAZkBLwH/AcwCmQH/
-        A8wB/wPMAf8DwAH/AaQCoAH/wAABpAKgAf8D6gH/A/EB/wPXAv8BmQEAAv8BLwEAAv8BLwEAAv8BLwEA
-        Av8BLwEAAv8BLwEAAv8BLwEAAv8BLwEAAf8B8AHKAaYB/wHwAfsC/wPqAf8DsgH/wAADsgX/A/EB/wPX
-        Av8BzAEvAv8BzAEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAf8DzAH/A+oB/wPx
+        A9cB/wPXFf8D8QH/A/EB/wPxAf8D1wH/A9cB/wPMAf8DwAH/wAADmQH/A/EB/wPMAf8DPwH/A7IB/wPA
+        Af8DwAH/A8AB/wPAAf8DwAH/A8AB/wOyAf8DPwH/A8wB/wPxAf8BpAKgAf/AAAOZAf8D1wH/A8AB/wMn
+        Af8DLgH/Az8B/wM/Af8DPwH/Az8B/wM/Af8DPwH/Az8B/wMnAf8DsgH/A9cB/wGkAqAB/8AAA5YB/wPA
+        Af8DwAH/A8wB/wHMApkB/wHMApkC/wGZAS4C/wGZAS4C/wGZAS4C/wGZAS4B/wHMAZkBLgH/AcwCmQH/
+        A8wB/wPMAf8DwAH/AaQCoAH/wAABpAKgAf8D6gH/A/EB/wPXAv8BmQEAAv8BLgEAAv8BLgEAAv8BLgEA
+        Av8BLgEAAv8BLgEAAv8BLgEAAv8BLgEAAf8B8AHKAaYB/wHwAfsC/wPqAf8DsgH/wAADsgX/A/EB/wPX
+        Av8BzAEuAv8BzAEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAv8BmQEAAf8DzAH/A+oB/wPx
         Af8DsgH/wAADmQn/A90B/wHwAcoBpgL/AewBzAL/AewBzAL/AcwBmQL/AcwBmQL/AcwBmQL/AcwBmQH/
         AswBmQH/A8wB/wPMAf8D1wH/A5kB/8AAAaQCoAH/A8wB/wPxAf8D6gH/A7IB/wPdAf8D4wH/A+MB/wPj
         Af8D4wH/A90B/wOyAf8D3QH/A+oB/wPAAf8BpAKgAf/EAAOyAf8DlgH/A4YB/wGkAqAF/wHwAfsC/wHw
