Prenotazione Camera - Calcolo dello sconto.

--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -124,44 +124,44 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
-        CAAAAk1TRnQBSQFMAgEBAgEAAQQBAgEEAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBOAE5Af8BqgEpASoB/wGkASYBJwH/AZ8BIwEkAf8BmgIh
-        Af8BlAIeAf8BjwIbAf8BiQIYAf8BgwIVAf8BTAEPARAB/wFMAQ8BEAH/AUYCDQH/AUIBCgELAf/IAAHP
-        AT8BQAH/AfMBjgGPAf8B5gGAAYEB/wGqARgBAAH/ARsBBgEAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
-        Af8BzgHIAcQB/wEqASEBHAH/AZ4BEgEHAf8BnAERAQoB/wGYAQ0BBQH/AUYCDQH/JAADNgFZAkcBRgGB
-        AxABFZgAAdEBQwFEAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AUUBLwEfAf8BGwEQAQgB/wGNAUwBPAH/
-        Ae0B4AHYAf8B8QHnAeAB/wGPAVMBRwH/AaMBFQEJAf8BogEWARAB/wGcAREBCQH/AUwBDwEQAf8kAAMs
-        AUMBcgJNAfoCagFHAfkDLwFKlAAB1AFJAUoC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BRQEvAR8B/wMA
-        Af8BGwEQAQgB/wHpAdkBzgH/AewB3QHUAf8BhQFIATsB/wGuAR8BFwH/AaoBHQEYAf8BowEWARAB/wFR
-        AhIB/yQAAxgBIgM4AVwBmQF/AU8B/gJiAUkB9gMAAQGQAAHXAU8BUAL/AakBqgH/AfsBnwGgAf8B9QGT
-        AZQB/wFFAS8BHwH/AUUBLwEfAf8BRQEvAR8B/wFFAS8BHwH/AUoBNgEmAf8BUQE+AS8B/wG6ASoBKAH/
-        AbIBIwEgAf8BqgEdARgB/wGDAhUB/ywAAlwBWAHRAZkBfwFUAf4DPwFtkAAB2wGDAYQC/wGzAbQC/wGt
-        Aa4B/wH8AaMBpAH/AfQBjgGPAf8B7AGGAYcB/wHmAYABgQH/Ad8BTQFOAf8B1wFFAUYB/wHRAT8BQAH/
-        AcEBMQEwAf8BugEqASgB/wGyASQBIAH/AYkCGAH/HAADBwEJDAADLgFHAXQBPwErAfwBmAF/AWYB/gME
-        AQaMAAHfAYoBiwL/AbsBvAL/AbYBtwH/AckBNwE0Af8BxAEyASoB/wG+ASwBHwH/AbgBJgETAf8BswEh
-        AQgB/wGtARsBAAH/AacBFQEAAf8BoQEPAQAB/wHBATEBMAH/AboBKgEoAf8BjwIbAf8MAAHjAUwBFgH/
-        AdYBRgEUAf8BxwE9AQ4B/wG2ATMBCAH/Aa0BLgEFAf8BlQEgAQAB/wgAAxgBIgF/AWkBPQH+AagBhAFA
-        Af0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMAToBOwn/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
-        Af8B5QHRAcYB/wHhAcoBvQH/AaEBDwEAAf8BwgExATAB/wGUAh4B/wwAAeUBgwEmAf8B3wFHAQoB/wHq
-        AYIBHQH/AfMBmgE+Af8B4gGMATUB/wMmATkIAAMEAQUBqAJAAf0CYgFJAfYDVgG0jAAB5QGXAZgC/wG9
-        Ab4B/wHTAUEBQg3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGnARUBAAH/
-        AcwCOwH/AZoCIQH/DAAB5gGOATYB/wHsAYIBHwH/AfMBjQEvAf8B7AGcAUoB/wFWAlQBqwMqAUEIAAMC
-        AQMBagFfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBSgFLEf8B+wH4AfYB/wH2Ae4B6gH/
-        AfAB5QHeAf8B6gHbAdIB/wGtARsBAAH/AdcBRQFGAf8BnwEjASQB/wwAAecBmQFHAf8B8wGaAT4B/wH0
-        AZwBRQH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHtAaYBpwL/
-        Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEhAQgB/wHfAU0BTgH/AaQBJgEn
-        Af8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAXoBZQFZAfwBkAF/AV4B/gHHAUQBGQH/AWgCTQH6A1kBxwJh
-        AVsB4QFgAisB/AFrAWoBVgH5A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/AfYB7gHq
-        Af8BuAEmARMB/wE7AgcB/wGqASkBKgH/DAAB6gGqAYsB/wMhATAEAANUAaYBhAJfAfsDZAHsAXABXwFE
-        AfsBaAEuASsB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/Ab0BvgH/AfgBkgGTHf8B+wH4
-        AfYB/wG+ASwBHwH/AbABLAEtAf8BsAEsAS0B/xwAA1cBuAF5AWQBWAH8A2QB5wNfAeMDYQHcA18B4wNn
-        AfIDEwEajAAB9QG2AbcB/wH1AbYBtwH/AfMBsgGzAf8B8QGtAa4B/wHuAacBqAH/AeoBoQGiAf8B5wGa
-        AZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBTgFPAf8B0wFIAUkB/wHRAUMBRAH/
-        IAADOAFcA1cBuANhAeIDWwHEA04BlAMTARr/AI0AAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEB
-        BQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wEfBAABgAEBAf8BDwQAAYABAQH/AQcEAAGAAQEB/wHH
-        BAABgAEBAf0BwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAUMEAAGAAQEBgAED
-        BAABgAEBAcgBAwQAAYABAQH8AQMEAAGAAQEB/gEHBAAE/wQACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACO
+        CAAAAk1TRnQBSQFMAgEBAgEAAQwBAgEMAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBNwE4Af8BqgEoASkB/wGkASUBJgH/AZ8BIgEjAf8BmgIg
+        Af8BlAIdAf8BjwIaAf8BiQIXAf8BgwIUAf8BSwEOAQ8B/wFLAQ4BDwH/AUUCDAH/AUEBCQEKAf/IAAHP
+        AT4BPwH/AfMBjgGPAf8B5gGAAYEB/wGqARcBAAH/ARoBBQEAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
+        Af8BzgHIAcQB/wEpASABGwH/AZ4BEQEGAf8BnAEQAQkB/wGYAQwBBAH/AUUCDAH/JAADNgFZAkcBRgGB
+        AxABFZgAAdEBQgFDAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AUQBLgEeAf8BGgEPAQcB/wGNAUsBOwH/
+        Ae0B4AHYAf8B8QHnAeAB/wGPAVIBRgH/AaMBFAEIAf8BogEVAQ8B/wGcARABCAH/AUsBDgEPAf8kAAMs
+        AUMBcQJNAfoCagFHAfkDLwFKlAAB1AFIAUkC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BRAEuAR4B/wMA
+        Af8BGgEPAQcB/wHpAdkBzgH/AewB3QHUAf8BhQFHAToB/wGuAR4BFgH/AaoBHAEXAf8BowEVAQ8B/wFQ
+        AhEB/yQAAxgBIgM4AVwBlwF/AU8B/gJiAUkB9gMAAQGQAAHXAU4BTwL/AakBqgH/AfsBnwGgAf8B9QGT
+        AZQB/wFEAS4BHgH/AUQBLgEeAf8BRAEuAR4B/wFEAS4BHgH/AUkBNQElAf8BUAE9AS4B/wG6ASkBJwH/
+        AbIBIgEfAf8BqgEcARcB/wGDAhQB/ywAAlwBWAHRAZcBfwFUAf4DPwFtkAAB2wGDAYQC/wGzAbQC/wGt
+        Aa4B/wH8AaMBpAH/AfQBjgGPAf8B7AGGAYcB/wHmAYABgQH/Ad8BTAFNAf8B1wFEAUUB/wHRAT4BPwH/
+        AcEBMAEvAf8BugEpAScB/wGyASMBHwH/AYkCFwH/HAADBwEJDAADLgFHAXMBPgErAfwBlgF/AWYB/gME
+        AQaMAAHfAYoBiwL/AbsBvAL/AbYBtwH/AckBNgEzAf8BxAExASkB/wG+ASsBHgH/AbgBJQESAf8BswEg
+        AQcB/wGtARoBAAH/AacBFAEAAf8BoQEOAQAB/wHBATABLwH/AboBKQEnAf8BjwIaAf8MAAHjAUsBFQH/
+        AdYBRQETAf8BxwE8AQ0B/wG2ATIBBwH/Aa0BLQEEAf8BlQEfAQAB/wgAAxgBIgF/AWkBPQH+AagBhAFA
+        Af0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMATkBOgn/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
+        Af8B5QHRAcYB/wHhAcoBvQH/AaEBDgEAAf8BwgEwAS8B/wGUAh0B/wwAAeUBgwElAf8B3wFGAQkB/wHq
+        AYIBHAH/AfMBmgE9Af8B4gGMATQB/wMmATkIAAMEAQUBqAJAAf0CYgFJAfYDVgG0jAAB5QGXAZgC/wG9
+        Ab4B/wHTAUABQQ3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGnARQBAAH/
+        AcwCOgH/AZoCIAH/DAAB5gGOATUB/wHsAYIBHgH/AfMBjQEuAf8B7AGcAUkB/wFWAlQBqwMqAUEIAAMC
+        AQMBZwFfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBSQFKEf8B+wH4AfYB/wH2Ae4B6gH/
+        AfAB5QHeAf8B6gHbAdIB/wGtARoBAAH/AdcBRAFFAf8BnwEiASMB/wwAAecBmQFGAf8B8wGaAT0B/wH0
+        AZwBRAH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHtAaYBpwL/
+        Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEgAQcB/wHfAUwBTQH/AaQBJQEm
+        Af8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAXkBZAFYAfwBjgF/AV4B/gHHAUMBGAH/AWcCTQH6A1kBxwJh
+        AVsB4QFfAisB/AJqAVYB+QNcAd+MAAHwAawBrQL/Ab0BvgH/Ae8BiQGKGf8B+wH4AfYB/wH2Ae4B6gH/
+        AbgBJQESAf8BOgIGAf8BqgEoASkB/wwAAeoBqgGLAf8DIQEwBAADVAGmAYMCXwH7A2QB7AFtAV8BRAH7
+        AWcBLQErAfwBbQFgAVEB9wJkAVMB8QNkAewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4AZIBkx3/AfsB+AH2
+        Af8BvgErAR4B/wGwASsBLAH/AbABKwEsAf8cAANXAbgBeAFjAVcB/ANkAecDXwHjA2EB3ANfAeMDZwHy
+        AxMBGowAAfUBtgG3Af8B9QG2AbcB/wHzAbIBswH/AfEBrQGuAf8B7gGnAagB/wHqAaEBogH/AecBmgGb
+        Af8B5AGTAZQB/wHgAY4BjwH/Ad0BhwGIAf8B2gGAAYEB/wHWAU0BTgH/AdMBRwFIAf8B0QFCAUMB/yAA
+        AzgBXANXAbgDYQHiA1sBxANOAZQDEwEa/wCNAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUA
+        AYAXAAP/AQAE/wQAAYABAQL/BAABgAEBAf8BHwQAAYABAQH/AQ8EAAGAAQEB/wEHBAABgAEBAf8BxwQA
+        AYABAQH9AcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAFDBAABgAEBAYABAwQA
+        AYABAQHIAQMEAAGAAQEB/AEDBAABgAEBAf4BBwQABP8EAAs=
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4537,6 +4537,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
