--- a/Codice/Form/Hospitality/SelezionaPrenotazione.resx
+++ b/Codice/Form/Hospitality/SelezionaPrenotazione.resx
@@ -124,44 +124,44 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
-        CAAAAk1TRnQBSQFMAgEBAgEAAZQBAQGUAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBRgFHAf8BqgE3ATgB/wGkATQBNQH/AZ8BMQEyAf8BmgIv
-        Af8BlAIsAf8BjwIpAf8BiQImAf8BgwIjAf8BWgEdAR4B/wFaAR0BHgH/AVQCGwH/AVABGAEZAf/IAAHP
-        AU0BTgH/AfMBjgGPAf8B5gGAAYEB/wGqASYBBgH/ASkBFAEDAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
-        Af8BzgHIAcQB/wE4AS8BKgH/AZ4BIAEVAf8BnAEfARgB/wGYARsBEwH/AVQCGwH/JAADNgFZAkcBRgGB
-        AxABFZgAAdEBUQFSAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AVMBPQEtAf8BKQEeARYB/wGNAVoBSgH/
-        Ae0B4AHYAf8B8QHnAeAB/wGPAWEBVQH/AaMBIwEXAf8BogEkAR4B/wGcAR8BFwH/AVoBHQEeAf8kAAMs
-        AUMBhAFgAU0B+gGBAWoBRwH5Ay8BSpQAAdQBVwFYAv8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AVMBPQEt
-        Af8DAAH/ASkBHgEWAf8B6QHZAc4B/wHsAd0B1AH/AYUBVgFJAf8BrgEtASUB/wGqASsBJgH/AaMBJAEe
-        Af8BXwIgAf8kAAMYASIDOAFcAbUBfwFPAf4CYgFJAfYDAAEBkAAB1wFdAV4C/wGpAaoB/wH7AZ8BoAH/
-        AfUBkwGUAf8BUwE9AS0B/wFTAT0BLQH/AVMBPQEtAf8BUwE9AS0B/wFYAUQBNAH/AV8BTAE9Af8BugE4
-        ATYB/wGyATEBLgH/AaoBKwEmAf8BgwIjAf8sAAJcAVgB0QG1AX8BVAH+Az8BbZAAAdsBgwGEAv8BswG0
-        Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGAAYEB/wHfAVsBXAH/AdcBUwFUAf8B0QFN
-        AU4B/wHBAT8BPgH/AboBOAE2Af8BsgEyAS4B/wGJAiYB/xwAAwcBCQwAAy4BRwGIAVgBKwH8AbQBfwFm
-        Af4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAUUBQgH/AcQBQAE4Af8BvgE6AS0B/wG4ATQBIQH/
-        AbMBLwEWAf8BrQEpAQoB/wGnASMBAAH/AaEBHQEAAf8BwQE/AT4B/wG6ATgBNgH/AY8CKQH/DAAB4wFa
-        ASQB/wHWAVQBIgH/AccBSwEcAf8BtgFBARYB/wGtATwBEwH/AZUBLgEKAf8IAAMYASIBhgFpAT0B/gGw
-        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAFIAUkJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
-        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhAR0BAAH/AcIBPwE+Af8BlAIsAf8MAAHlAYMBNAH/Ad8BVQEY
-        Af8B6gGCASsB/wHzAZoBTAH/AeIBjAFDAf8DJgE5CAADBAEFAagBQQFAAf0CYgFJAfYDVgG0jAAB5QGX
-        AZgC/wG9Ab4B/wHTAU8BUA3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGn
-        ASMBAAH/AcwCSQH/AZoCLwH/DAAB5gGOAUQB/wHsAYIBLQH/AfMBjQE9Af8B7AGcAVgB/wFWAlQBqwMq
-        AUEIAAMCAQMBhgFfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBWAFZEf8B+wH4AfYB/wH2
-        Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wGtASkBCgH/AdcBUwFUAf8BnwExATIB/wwAAecBmQFVAf8B8wGa
-        AUwB/wH0AZwBUwH/A18B6AGoAkAB/QFxAVwBPgH4AkABPwFvBAADGgEkAl8BVwHoAmIBWAHvA1gBvIwA
-        Ae0BpgGnAv8BvQG+Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzAS8BFgH/Ad8BWwFc
-        Af8BpAE0ATUB/wgAAwcBCQHpAaQBgQH/A14B1QNHAYABmgFzAWcB/AGsAX8BXgH+AccBUgEnAf8BdgJN
-        AfoDWQHHAmEBWwHhAW4BNgErAfwBhgFqAVYB+QNcAd+MAAHwAawBrQL/Ab0BvgH/Ae8BiQGKGf8B+wH4
-        AfYB/wH2Ae4B6gH/AbgBNAEhAf8BSQIVAf8BqgE3ATgB/wwAAeoBqgGLAf8DIQEwBAADVAGmAZIBgQFf
-        AfsDZAHsAYgBXwFEAfsBdgE8ASsB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/Ab0BvgH/
-        AfgBkgGTHf8B+wH4AfYB/wG+AToBLQH/AbABOgE7Af8BsAE6ATsB/xwAA1cBuAGYAXIBZgH8A2QB5wNf
-        AeMDYQHcA18B4wNnAfIDEwEajAAB9QG2AbcB/wH1AbYBtwH/AfMBsgGzAf8B8QGtAa4B/wHuAacBqAH/
-        AeoBoQGiAf8B5wGaAZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBXAFdAf8B0wFW
-        AVcB/wHRAVEBUgH/IAADOAFcA1cBuANhAeIDWwHEA04BlAMTARr/AI0AAUIBTQE+BwABPgMAASgDAAFA
-        AwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wEfBAABgAEBAf8BDwQAAYABAQH/
-        AQcEAAGAAQEB/wHHBAABgAEBAf0BwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHA
-        AUMEAAGAAQEBgAEDBAABgAEBAcgBAwQAAYABAQH8AQMEAAGAAQEB/gEHBAAE/wQACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACa
+        CAAAAk1TRnQBSQFMAgEBAgEAAZwBAQGcAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBRQFGAf8BqgE2ATcB/wGkATMBNAH/AZ8BMAExAf8BmgIu
+        Af8BlAIrAf8BjwIoAf8BiQIlAf8BgwIiAf8BWQEcAR0B/wFZARwBHQH/AVMCGgH/AU8BFwEYAf/IAAHP
+        AUwBTQH/AfMBjgGPAf8B5gGAAYEB/wGqASUBBQH/ASgBEwECAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
+        Af8BzgHIAcQB/wE3AS4BKQH/AZ4BHwEUAf8BnAEeARcB/wGYARoBEgH/AVMCGgH/JAADNgFZAkcBRgGB
+        AxABFZgAAdEBUAFRAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AVIBPAEsAf8BKAEdARUB/wGNAVkBSQH/
+        Ae0B4AHYAf8B8QHnAeAB/wGPAWABVAH/AaMBIgEWAf8BogEjAR0B/wGcAR4BFgH/AVkBHAEdAf8kAAMs
+        AUMBgQFeAU0B+gGAAWoBRwH5Ay8BSpQAAdQBVgFXAv8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AVIBPAEs
+        Af8DAAH/ASgBHQEVAf8B6QHZAc4B/wHsAd0B1AH/AYUBVQFIAf8BrgEsASQB/wGqASoBJQH/AaMBIwEd
+        Af8BXgIfAf8kAAMYASIDOAFcAbMBfwFPAf4CYgFJAfYDAAEBkAAB1wFcAV0C/wGpAaoB/wH7AZ8BoAH/
+        AfUBkwGUAf8BUgE8ASwB/wFSATwBLAH/AVIBPAEsAf8BUgE8ASwB/wFXAUMBMwH/AV4BSwE8Af8BugE3
+        ATUB/wGyATABLQH/AaoBKgElAf8BgwIiAf8sAAJcAVgB0QGzAX8BVAH+Az8BbZAAAdsBgwGEAv8BswG0
+        Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGAAYEB/wHfAVoBWwH/AdcBUgFTAf8B0QFM
+        AU0B/wHBAT4BPQH/AboBNwE1Af8BsgExAS0B/wGJAiUB/xwAAwcBCQwAAy4BRwGFAVcBKwH8AbIBfwFm
+        Af4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAUQBQQH/AcQBPwE3Af8BvgE5ASwB/wG4ATMBIAH/
+        AbMBLgEVAf8BrQEoAQkB/wGnASIBAAH/AaEBHAEAAf8BwQE+AT0B/wG6ATcBNQH/AY8CKAH/DAAB4wFZ
+        ASMB/wHWAVMBIQH/AccBSgEbAf8BtgFAARUB/wGtATsBEgH/AZUBLQEJAf8IAAMYASIBhAFpAT0B/gGv
+        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAFHAUgJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
+        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhARwBAAH/AcIBPgE9Af8BlAIrAf8MAAHlAYMBMwH/Ad8BVAEX
+        Af8B6gGCASoB/wHzAZoBSwH/AeIBjAFCAf8DJgE5CAADBAEFAagCQAH9AmIBSQH2A1YBtIwAAeUBlwGY
+        Av8BvQG+Af8B0wFOAU8N/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/AeUB0QHGAf8BpwEi
+        AQAB/wHMAkgB/wGaAi4B/wwAAeYBjgFDAf8B7AGCASwB/wHzAY0BPAH/AewBnAFXAf8BVgJUAasDKgFB
+        CAADAgEDAYUBXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcAVcBWBH/AfsB+AH2Af8B9gHu
+        AeoB/wHwAeUB3gH/AeoB2wHSAf8BrQEoAQkB/wHXAVIBUwH/AZ8BMAExAf8MAAHnAZkBVAH/AfMBmgFL
+        Af8B9AGcAVIB/wNfAegBqAJAAf0BcAFcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHt
+        AaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEuARUB/wHfAVoBWwH/
+        AaQBMwE0Af8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAZcBcgFmAfwBqgF/AV4B/gHHAVEBJgH/AXUCTQH6
+        A1kBxwJhAVsB4QFtATUBKwH8AYUBagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2
+        Af8B9gHuAeoB/wG4ATMBIAH/AUgCFAH/AaoBNgE3Af8MAAHqAaoBiwH/AyEBMAQAA1QBpgGRAYABXwH7
+        A2QB7AGHAV8BRAH7AXUBOwErAfwBbQFgAVEB9wJkAVMB8QNkAewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4
+        AZIBkx3/AfsB+AH2Af8BvgE5ASwB/wGwATkBOgH/AbABOQE6Af8cAANXAbgBlQFxAWUB/ANkAecDXwHj
+        A2EB3ANfAeMDZwHyAxMBGowAAfUBtgG3Af8B9QG2AbcB/wHzAbIBswH/AfEBrQGuAf8B7gGnAagB/wHq
+        AaEBogH/AecBmgGbAf8B5AGTAZQB/wHgAY4BjwH/Ad0BhwGIAf8B2gGAAYEB/wHWAVsBXAH/AdMBVQFW
+        Af8B0QFQAVEB/yAAAzgBXANXAbgDYQHiA1sBxANOAZQDEwEa/wCNAAFCAU0BPgcAAT4DAAEoAwABQAMA
+        ARADAAEBAQABAQUAAYAXAAP/AQAE/wQAAYABAQL/BAABgAEBAf8BHwQAAYABAQH/AQ8EAAGAAQEB/wEH
+        BAABgAEBAf8BxwQAAYABAQH9AcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAFD
+        BAABgAEBAYABAwQAAYABAQHIAQMEAAGAAQEB/AEDBAABgAEBAf4BBwQABP8EAAs=
 </value>
   </data>
   <metadata name="ErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -179,7 +179,7 @@
         RuU70GQG95Q6IKVh6UFdBDTTPaUOAPRDnXcdpA+oAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="eui_cmdContiSu.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="eui_cmdPrenSu.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAHRJREFUWEftjkkKwDAMxPL/T3cJUaClSxbbucyAsG9S0jRtdtux8savyM8TH4Ec
@@ -187,7 +187,7 @@
         ouUATdO0dUtpB7Bz1zcJkDBAAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="eui_cmdContiGiù.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="eui_cmdPrenGiù.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAHFJREFUWEftzkkKgDAQRNEs+v5XVlz8QMQhQw8i/aDW9UtK6RO2QDVARNxXAw7e
