Finito procedure addebiti extra Hotel.

--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -124,44 +124,44 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        CAAAAk1TRnQBSQFMAgEBAgEAASQBAgEkAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBNAE1Af8BqgElASYB/wGkASIBIwH/AZ8BHwEgAf8BmgId
-        Af8BlAIaAf8BjwIXAf8BiQIUAf8BgwIRAf8BSAELAQwB/wFIAQsBDAH/AUICCQH/AT4BBgEHAf/IAAHP
-        ATsBPAH/AfMBjgGPAf8B5gGAAYEB/wGqARQBAAH/ARcBAgEAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8
-        Af8BzgHIAcQB/wEmAR0BGAH/AZ4BDgEDAf8BnAENAQYB/wGYAQkBAQH/AUICCQH/JAADNgFZAkcBRgGB
-        AxABFZgAAdEBPwFAAv8BmQGaAf8B7AGGAYcB/wHmAYABgQH/AUEBKwEbAf8BFwEMAQQB/wGNAUgBOAH/
-        Ae0B4AHYAf8B8QHnAeAB/wGPAU8BQwH/AaMBEQEFAf8BogESAQwB/wGcAQ0BBQH/AUgBCwEMAf8kAAMs
-        AUMBbgJNAfoCagFHAfkDLwFKlAAB1AFFAUYC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BQQErARsB/wMA
-        Af8BFwEMAQQB/wHpAdkBzgH/AewB3QHUAf8BhQFEATcB/wGuARsBEwH/AaoBGQEUAf8BowESAQwB/wFN
-        Ag4B/yQAAxgBIgM4AVwBkQF/AU8B/gJiAUkB9gMAAQGQAAHXAUsBTAL/AakBqgH/AfsBnwGgAf8B9QGT
-        AZQB/wFBASsBGwH/AUEBKwEbAf8BQQErARsB/wFBASsBGwH/AUYBMgEiAf8BTQE6ASsB/wG6ASYBJAH/
-        AbIBHwEcAf8BqgEZARQB/wGDAhEB/ywAAlwBWAHRAZEBfwFUAf4DPwFtkAAB2wGDAYQC/wGzAbQC/wGt
-        Aa4B/wH8AaMBpAH/AfQBjgGPAf8B7AGGAYcB/wHmAYABgQH/Ad8BSQFKAf8B1wFBAUIB/wHRATsBPAH/
-        AcEBLQEsAf8BugEmASQB/wGyASABHAH/AYkCFAH/HAADBwEJDAADLgFHAXABOwErAfwBkAF/AWYB/gME
-        AQaMAAHfAYoBiwL/AbsBvAL/AbYBtwH/AckBMwEwAf8BxAEuASYB/wG+ASgBGwH/AbgBIgEPAf8BswEd
-        AQQB/wGtARcBAAH/AacBEQEAAf8BoQELAQAB/wHBAS0BLAH/AboBJgEkAf8BjwIXAf8MAAHjAUgBEgH/
-        AdYBQgEQAf8BxwE5AQoB/wG2AS8BBAH/Aa0BKgEBAf8BlQEcAQAB/wgAAxgBIgF/AWkBPQH+AagBhAFA
-        Af0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMATYBNwn/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
-        Af8B5QHRAcYB/wHhAcoBvQH/AaEBCwEAAf8BwgEtASwB/wGUAhoB/wwAAeUBgwEiAf8B3wFDAQYB/wHq
-        AYIBGQH/AfMBmgE6Af8B4gGMATEB/wMmATkIAAMEAQUBqAJAAf0CYgFJAfYDVgG0jAAB5QGXAZgC/wG9
-        Ab4B/wHTAT0BPg3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGnAREBAAH/
-        AcwCNwH/AZoCHQH/DAAB5gGOATIB/wHsAYIBGwH/AfMBjQErAf8B7AGcAUYB/wFWAlQBqwMqAUEIAAMC
-        AQMBYAFfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBRgFHEf8B+wH4AfYB/wH2Ae4B6gH/
-        AfAB5QHeAf8B6gHbAdIB/wGtARcBAAH/AdcBQQFCAf8BnwEfASAB/wwAAecBmQFDAf8B8wGaAToB/wH0
-        AZwBQQH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHtAaYBpwL/
-        Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEdAQQB/wHfAUkBSgH/AaQBIgEj
-        Af8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAXYBYQFVAfwBiAF/AV4B/gHHAUABFQH/AWICTQH6A1kBxwJh
-        AVsB4QFcAisB/AJqAVYB+QNcAd+MAAHwAawBrQL/Ab0BvgH/Ae8BiQGKGf8B+wH4AfYB/wH2Ae4B6gH/
-        AbgBIgEPAf8BNwIDAf8BqgElASYB/wwAAeoBqgGLAf8DIQEwBAADVAGmAYACXwH7A2QB7AFkAV8BRAH7
-        AWQCKwH8AW0BYAFRAfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7AfgB9gH/
-        Ab4BKAEbAf8BsAEoASkB/wGwASgBKQH/HAADVwG4AXUBYAFTAfwDZAHnA18B4wNhAdwDXwHjA2cB8gMT
-        ARqMAAH1AbYBtwH/AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHnAZoBmwH/
-        AeQBkwGUAf8B4AGOAY8B/wHdAYcBiAH/AdoBgAGBAf8B1gFKAUsB/wHTAUQBRQH/AdEBPwFAAf8gAAM4
-        AVwDVwG4A2EB4gNbAcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGA
-        FwAD/wEABP8EAAGAAQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/AccEAAGA
-        AQEB/QHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGAAQMEAAGA
-        AQEByAEDBAABgAEBAfwBAwQAAYABAQH+AQcEAAT/BAAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACG
+        CAAAAk1TRnQBSQFMAgEBAgEAAUQBAgFEAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBMAExAf8BqgEhASIB/wGkAR4BHwH/AZ8BGwEcAf8BmgIZ
+        Af8BlAIWAf8BjwITAf8BiQIQAf8BgwINAf8BRAEHAQgB/wFEAQcBCAH/AT4CBQH/AToBAgEDAf/IAAHP
+        ATcBOAH/AfMBjgGPAf8B5gGAAYEB/wGqARABAAH/ARMCAAH/AcMBtAGrAf8BxgG7AbMB/wHKAcEBvAH/
+        Ac4ByAHEAf8BIgEZARQB/wGeAQoBAAH/AZwBCQECAf8BmAEFAQAB/wE+AgUB/yQAAzYBWQJHAUYBgQMQ
+        ARWYAAHRATsBPAL/AZkBmgH/AewBhgGHAf8B5gGAAYEB/wE9AScBFwH/ARMBCAEAAf8BjQFEATQB/wHt
+        AeAB2AH/AfEB5wHgAf8BjwFLAT8B/wGjAQ0BAQH/AaIBDgEIAf8BnAEJAQEB/wFEAQcBCAH/JAADLAFD
+        AWoCTQH6AmoBRwH5Ay8BSpQAAdQBQQFCAv8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AT0BJwEXAf8DAAH/
+        ARMBCAEAAf8B6QHZAc4B/wHsAd0B1AH/AYUBQAEzAf8BrgEXAQ8B/wGqARUBEAH/AaMBDgEIAf8BSQIK
+        Af8kAAMYASIDOAFcAYkBfwFPAf4CYgFJAfYDAAEBkAAB1wFHAUgC/wGpAaoB/wH7AZ8BoAH/AfUBkwGU
+        Af8BPQEnARcB/wE9AScBFwH/AT0BJwEXAf8BPQEnARcB/wFCAS4BHgH/AUkBNgEnAf8BugEiASAB/wGy
+        ARsBGAH/AaoBFQEQAf8BgwINAf8sAAJcAVgB0QGJAX8BVAH+Az8BbZAAAdsBgwGEAv8BswG0Av8BrQGu
+        Af8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGAAYEB/wHfAUUBRgH/AdcBPQE+Af8B0QE3ATgB/wHB
+        ASkBKAH/AboBIgEgAf8BsgEcARgB/wGJAhAB/xwAAwcBCQwAAy4BRwFsATcBKwH8AYgBfwFmAf4DBAEG
+        jAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAS8BLAH/AcQBKgEiAf8BvgEkARcB/wG4AR4BCwH/AbMBGQEA
+        Af8BrQETAQAB/wGnAQ0BAAH/AaEBBwEAAf8BwQEpASgB/wG6ASIBIAH/AY8CEwH/DAAB4wFEAQ4B/wHW
+        AT4BDAH/AccBNQEGAf8BtgErAQAB/wGtASYBAAH/AZUBGAEAAf8IAAMYASIBfwFpAT0B/gGoAYQBQAH9
+        A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAEyATMJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/
+        AeUB0QHGAf8B4QHKAb0B/wGhAQcBAAH/AcIBKQEoAf8BlAIWAf8MAAHlAYMBHgH/Ad8BPwECAf8B6gGC
+        ARUB/wHzAZoBNgH/AeIBjAEtAf8DJgE5CAADBAEFAagCQAH9AmIBSQH2A1YBtIwAAeUBlwGYAv8BvQG+
+        Af8B0wE5AToN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/AeUB0QHGAf8BpwENAQAB/wHM
+        AjMB/wGaAhkB/wwAAeYBjgEuAf8B7AGCARcB/wHzAY0BJwH/AewBnAFCAf8BVgJUAasDKgFBCAADAgED
+        Al8BMgH7AmABWQHrA1kBwowAAekBngGfAv8BvQG+Af8B3AFCAUMR/wH7AfgB9gH/AfYB7gHqAf8B8AHl
+        Ad4B/wHqAdsB0gH/Aa0BEwEAAf8B1wE9AT4B/wGfARsBHAH/DAAB5wGZAT8B/wHzAZoBNgH/AfQBnAE9
+        Af8DXwHoAagCQAH9AlwBPgH4AkABPwFvBAADGgEkAl8BVwHoAmIBWAHvA1gBvIwAAe0BpgGnAv8BvQG+
+        Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzARkBAAH/Ad8BRQFGAf8BpAEeAR8B/wgA
+        AwcBCQHpAaQBgQH/A14B1QNHAYABcgFdAU0B/AGAAX8BXgH+AccBPAERAf8BWgJNAfoDWQHHAmEBWwHh
+        AVgCKwH8AmoBVgH5A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/AfYB7gHqAf8BuAEe
+        AQsB/wEzAgAB/wGqASEBIgH/DAAB6gGqAYsB/wMhATAEAANUAaYBdgJfAfsDZAHsAl8BRAH7AWACKwH8
+        AW0BYAFRAfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7AfgB9gH/Ab4BJAEX
+        Af8BsAEkASUB/wGwASQBJQH/HAADVwG4AXEBXAFLAfwDZAHnA18B4wNhAdwDXwHjA2cB8gMTARqMAAH1
+        AbYBtwH/AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHnAZoBmwH/AeQBkwGU
+        Af8B4AGOAY8B/wHdAYcBiAH/AdoBgAGBAf8B1gFGAUcB/wHTAUABQQH/AdEBOwE8Af8gAAM4AVwDVwG4
+        A2EB4gNbAcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEA
+        BP8EAAGAAQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/AccEAAGAAQEB/QHD
+        BAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGAAQMEAAGAAQEByAED
+        BAABgAEBAfwBAwQAAYABAQH+AQcEAAT/BAAL
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4537,6 +4537,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
