--- a/Codice/Form/Hospitality/InvioEmail.resx
+++ b/Codice/Form/Hospitality/InvioEmail.resx
@@ -121,6 +121,50 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="eui_cmdAnnulla.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAACNxJREFUWEfF
+        V2lsVNcV5l8gJJAEkkgRQmxOAjisYTGLMWFx2KFlKYsS/0hoFKRE+ZEGEqJUQipUVIkaERpq4w3HC96w
+        wfUA9ixexzNjj+0Zz3jswZ4ZL9gem63UBWPe1+88v3EtQltQVfVIR8+ed+/5vrPe+0Y9qRz6+OMwagz1
+        FNVI9VPvaSp/y2/yTtaEadv+e6GxqN98/nn8kcOHbyckJPQbjcaHTU1NuNHXhwcPHqgqf8tv8k7WyFrZ
+        I3s1M08v3Dzt6NGjP/7+xIlbBoPhYW8wqAQ9jUp7cbHiTUuH+4fTcP7uBGq+/gb1J/8AT3IS/Hqj0uPx
+        KL09PYrskb1iQ2xpZp9MuGHNsWPHGnWFhQM3e3uVjpJS+HOy0XU2Hr5PP4X/wAEEfrET/h3b0bptG5qp
+        ru07YN+xA+b334cjKUnxmSuV6+3titgQW2JTM//vhQu3njh+vMfhcCi9tbVozTiP3uRktH34IToJ0E6w
+        9i3b4NuyBa1UL7V5w2Y0btwI14ZoOKOjYd2wAaWbNqH222/RZauG2BKbYluDebwIS1no9/sRKChAe2oa
+        Or44jA4NOLB1qwrcsnkzvARoJpD73XfRQFDHunWoo9rXrIHtnXdgXbUKJfz7L+vWw5udDbGpkXh8JPhi
+        moRK2Krg8fEIHPw1OrcTdP16NK1cCe/atUPABPVEE5i/O9asRR2B7AStXrMa5mXLUD53PkoXLULpihXQ
+        c1/Bqih4s7LUSGjp+HlNSLFIviTszd99h7aPPlI9bo6KRDfD//f8fLTzWb88Am4COwkaArZGRcFCj8sW
+        LoSVewIkb99/AFdmzUTR4sXQLY1AXuQqdFutEAzB0mCHhIyipGKl4FynT6Ptq6/g28Tcrl6NThYVrl+H
+        Kt3d8O7bBwuBQsBV9NAcuRIl8+ahipG5ZjSi5UYvfHSkcucuXHzzTVxasAB5b7+Nwl/uhGAIlmBq8KNG
+        Sc/q9fqHnZYqNB/5Eq3MsYD79uwBenqGwENyvQvu/ftRMWcOqiIjUc6Qm+aEw7xhI66VlKCprQ3OhgY4
+        OBc8Vguusj6yw8KQNTscOQsWojHlJ0iLCqYKTiZhMjiC3d1KU1oammNi0By9Di7mr2XPr4A7dzTkf8q9
+        ri44SaKY3hXPnoVyFmNzaSma2tvRQPDamhp0cM3du3eRy3epU6ciddYsZJCEbs8uyJwQTMEWAjEyvXo8
+        TbAfOgQ3C83FYnJIUTFszR98ANy8qQIPDg6iv78fd/m85Q/Atn07TEyDgDeyyhucTtjt9iFwEk/muzPP
+        PYfk8eORSD1LzZg7D111dUpiYmK/YAuBUzJC/VeKFfuu3XAy9PUsqBqqjfktnRUOx3vvoT8YxABJ3L59
+        Wx293bduobO+Hq7iYjXcAmypqkKgowN/5ZpEpuZHgp8bOxYJ1HhNUyZNgiMuDiaT6aFgCwGjzPGG2Dil
+        muGqXRmJmpUrYGEKpKUqI5arobZx+vXReB/D2slnS0sLPF4vHB4PqqurYTab4Q+Bk7x4nvLss0giaKKm
+        QiR5wgQYGWnBFGwh4BePrL/9BrbVbCcN2LxsKcqWLkUJ28gYEYHC6VNRwmnXwlby+nxwuVxwMAI1BK+i
+        5/5AAHcIfo6pC4GHVKIgKmSSxo3DBc4OwRRsIXBPTjT93r2wLF+ugpctWYISDhIjwfXSx9OnI2/MGKTR
+        mJ5RchK8zuEY9ry0rAx9NHiRLSthl3WpI1RIhJ4pJJH61lvqKSrYKoH79+/DdPDgkMcCzOLT81nE3r7E
+        kGUTPJ2bL06ejNrz51FNcJvNNgTOAjSx/QwkYeWwujR7tgok60UzHlUhMH8+BgYGhgn4gz1BVB79GgYS
+        0Av44kXQsW0uEDhLA89j8dQSwOZ2w8o0mCsrUSoEKipgMhhQzGIsKi9HjU6Hgpkz1T2yV8jnjtALjFAu
+        Z0Nfb+9wCozuRo9Sd+YMrpKAjM7C8HB1ozAWb3IJbs/Lg5Wht9LzSoL72fM3aKSQM75IIqDXy4UEFeyG
+        BpMJujfeUAnka3pJdPRoFLAGDJ98Ag/vDYItBE6R/QPv1SsojFgG3dy5w+CSt6yXX4adp5mAW+h5BT0W
+        8Js3biCJhJOnTYMuMwtGRkOiInXh4UzwW8womjFDBb1MvUK9Ss0cNx4NyUkKyQ4KthCIORt/tr/d7cJF
+        FmD2Sy+p4RPPzzP/9szMIXCLRQX3aeChVhOSmWxTA9NT09iIRq71sUv6/taPvro6GCdNhv6ZZ2CgGqnn
+        p0xFd4ODgyhheBCpo7ijrU3J5ymXPnGiCi59m8ERamFuzTxYyplfP+f8TVZ7PM8AqXYBDxXaBRZfNVMQ
+        4NkR5NC6pyhqq8kMKSNw5ZjRKOMktJ44DrnefXnkyNAoFpGDQQ6IhthYpDLfSTQuQ+PP1DR2g573g9bO
+        ThU8jnPiT3wvJIWAgEvKpGALXn8dLTwHHsjEZJSu8HQsYtiruaaGtjJffBE+ox4G44jDSIRMho/jPN5q
+        Ul55BbHcICE+TU3m8Vt7+TJil0XgB/4vA0UISL9nUgVccl1ILWENBXJyYODFRUJfx7UO7rFNmIg8Enrs
+        cSwSupB0MdfnZoQhgfkXTwVQ9I/aU+a5pEcISPjFe6lyHcHFW8mzPMv5FGD388+jjnWVNmUKgizQyzrd
+        zy8kImQ0fCXzpKcjhRtiSeJ7DVjISERGElBzr3kvFS7gFfzNxt8EvJHgDtpIf+01tGTnwOl0/usrmQhf
+        DF9Km0gikSM4jm34PQ0JiZEE1BZ9xPtSahXX1FJd3GMneAbbtCU39z9fSkPCBcPXckmHHBxnXn0VcSwg
+        qXypjUcJSI9Lm5nHjEUNgW1cm/vCC8jnLSnIwfTE1/KQCEsJVejDpJXtVfbFESROnYZY5jOFxtNJJosk
+        LlEvU/UEzmObpRJct3s3r+I5asE99YdJSLhh+NOMk3JQrmzdHJ/XCgqU6pMnlcJ9e5EesQQp4bORR09N
+        n30GNz/PunhQBeXTTK8flL1iQ2xpZp9euPn/83H6qNDY/+DzfNSofwDWYGmBKz70PQAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
   <data name="eui_cmdInvia.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
@@ -195,50 +239,6 @@
         2If47LsI3j+ITan9CNx/G7ydxdie3AT/xK/xQWQtPggQYmP1R9jQ5Auvg16kaj/4yldgs5CPk1UL3ohe
         dfH3KrAmvB5+8Vfht+cGPKM74Ol/FGvCVHg3pBoBCRLwImLhmbQCy2PfxjuRy7A+hQffBG9Xw6UCcCsq
         SQWfLcV4w/MLvPVhNnbvUyNZWPfXH/q6AK+9/uMAHh5/AuM78Y4A8kjyAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="eui_cmdAnnulla.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAACNxJREFUWEfF
-        V2lsVNcV5l8gJJAEkkgRQmxOAjisYTGLMWFx2KFlKYsS/0hoFKRE+ZEGEqJUQipUVIkaERpq4w3HC96w
-        wfUA9ixexzNjj+0Zz3jswZ4ZL9gem63UBWPe1+88v3EtQltQVfVIR8+ed+/5vrPe+0Y9qRz6+OMwagz1
-        FNVI9VPvaSp/y2/yTtaEadv+e6GxqN98/nn8kcOHbyckJPQbjcaHTU1NuNHXhwcPHqgqf8tv8k7WyFrZ
-        I3s1M08v3Dzt6NGjP/7+xIlbBoPhYW8wqAQ9jUp7cbHiTUuH+4fTcP7uBGq+/gb1J/8AT3IS/Hqj0uPx
-        KL09PYrskb1iQ2xpZp9MuGHNsWPHGnWFhQM3e3uVjpJS+HOy0XU2Hr5PP4X/wAEEfrET/h3b0bptG5qp
-        ru07YN+xA+b334cjKUnxmSuV6+3titgQW2JTM//vhQu3njh+vMfhcCi9tbVozTiP3uRktH34IToJ0E6w
-        9i3b4NuyBa1UL7V5w2Y0btwI14ZoOKOjYd2wAaWbNqH222/RZauG2BKbYluDebwIS1no9/sRKChAe2oa
-        Or44jA4NOLB1qwrcsnkzvARoJpD73XfRQFDHunWoo9rXrIHtnXdgXbUKJfz7L+vWw5udDbGpkXh8JPhi
-        moRK2Krg8fEIHPw1OrcTdP16NK1cCe/atUPABPVEE5i/O9asRR2B7AStXrMa5mXLUD53PkoXLULpihXQ
-        c1/Bqih4s7LUSGjp+HlNSLFIviTszd99h7aPPlI9bo6KRDfD//f8fLTzWb88Am4COwkaArZGRcFCj8sW
-        LoSVewIkb99/AFdmzUTR4sXQLY1AXuQqdFutEAzB0mCHhIyipGKl4FynT6Ptq6/g28Tcrl6NThYVrl+H
-        Kt3d8O7bBwuBQsBV9NAcuRIl8+ahipG5ZjSi5UYvfHSkcucuXHzzTVxasAB5b7+Nwl/uhGAIlmBq8KNG
-        Sc/q9fqHnZYqNB/5Eq3MsYD79uwBenqGwENyvQvu/ftRMWcOqiIjUc6Qm+aEw7xhI66VlKCprQ3OhgY4
-        OBc8Vguusj6yw8KQNTscOQsWojHlJ0iLCqYKTiZhMjiC3d1KU1oammNi0By9Di7mr2XPr4A7dzTkf8q9
-        ri44SaKY3hXPnoVyFmNzaSma2tvRQPDamhp0cM3du3eRy3epU6ciddYsZJCEbs8uyJwQTMEWAjEyvXo8
-        TbAfOgQ3C83FYnJIUTFszR98ANy8qQIPDg6iv78fd/m85Q/Atn07TEyDgDeyyhucTtjt9iFwEk/muzPP
-        PYfk8eORSD1LzZg7D111dUpiYmK/YAuBUzJC/VeKFfuu3XAy9PUsqBqqjfktnRUOx3vvoT8YxABJ3L59
-        Wx293bduobO+Hq7iYjXcAmypqkKgowN/5ZpEpuZHgp8bOxYJ1HhNUyZNgiMuDiaT6aFgCwGjzPGG2Dil
-        muGqXRmJmpUrYGEKpKUqI5arobZx+vXReB/D2slnS0sLPF4vHB4PqqurYTab4Q+Bk7x4nvLss0giaKKm
-        QiR5wgQYGWnBFGwh4BePrL/9BrbVbCcN2LxsKcqWLkUJ28gYEYHC6VNRwmnXwlby+nxwuVxwMAI1BK+i
-        5/5AAHcIfo6pC4GHVKIgKmSSxo3DBc4OwRRsIXBPTjT93r2wLF+ugpctWYISDhIjwfXSx9OnI2/MGKTR
-        mJ5RchK8zuEY9ry0rAx9NHiRLSthl3WpI1RIhJ4pJJH61lvqKSrYKoH79+/DdPDgkMcCzOLT81nE3r7E
-        kGUTPJ2bL06ejNrz51FNcJvNNgTOAjSx/QwkYeWwujR7tgok60UzHlUhMH8+BgYGhgn4gz1BVB79GgYS
-        0Av44kXQsW0uEDhLA89j8dQSwOZ2w8o0mCsrUSoEKipgMhhQzGIsKi9HjU6Hgpkz1T2yV8jnjtALjFAu
-        Z0Nfb+9wCozuRo9Sd+YMrpKAjM7C8HB1ozAWb3IJbs/Lg5Wht9LzSoL72fM3aKSQM75IIqDXy4UEFeyG
-        BpMJujfeUAnka3pJdPRoFLAGDJ98Ag/vDYItBE6R/QPv1SsojFgG3dy5w+CSt6yXX4adp5mAW+h5BT0W
-        8Js3biCJhJOnTYMuMwtGRkOiInXh4UzwW8womjFDBb1MvUK9Ss0cNx4NyUkKyQ4KthCIORt/tr/d7cJF
-        FmD2Sy+p4RPPzzP/9szMIXCLRQX3aeChVhOSmWxTA9NT09iIRq71sUv6/taPvro6GCdNhv6ZZ2CgGqnn
-        p0xFd4ODgyhheBCpo7ijrU3J5ymXPnGiCi59m8ERamFuzTxYyplfP+f8TVZ7PM8AqXYBDxXaBRZfNVMQ
-        4NkR5NC6pyhqq8kMKSNw5ZjRKOMktJ44DrnefXnkyNAoFpGDQQ6IhthYpDLfSTQuQ+PP1DR2g573g9bO
-        ThU8jnPiT3wvJIWAgEvKpGALXn8dLTwHHsjEZJSu8HQsYtiruaaGtjJffBE+ox4G44jDSIRMho/jPN5q
-        Ul55BbHcICE+TU3m8Vt7+TJil0XgB/4vA0UISL9nUgVccl1ILWENBXJyYODFRUJfx7UO7rFNmIg8Enrs
-        cSwSupB0MdfnZoQhgfkXTwVQ9I/aU+a5pEcISPjFe6lyHcHFW8mzPMv5FGD388+jjnWVNmUKgizQyzrd
-        zy8kImQ0fCXzpKcjhRtiSeJ7DVjISERGElBzr3kvFS7gFfzNxt8EvJHgDtpIf+01tGTnwOl0/usrmQhf
-        DF9Km0gikSM4jm34PQ0JiZEE1BZ9xPtSahXX1FJd3GMneAbbtCU39z9fSkPCBcPXckmHHBxnXn0VcSwg
-        qXypjUcJSI9Lm5nHjEUNgW1cm/vCC8jnLSnIwfTE1/KQCEsJVejDpJXtVfbFESROnYZY5jOFxtNJJosk
-        LlEvU/UEzmObpRJct3s3r+I5asE99YdJSLhh+NOMk3JQrmzdHJ/XCgqU6pMnlcJ9e5EesQQp4bORR09N
-        n30GNz/PunhQBeXTTK8flL1iQ2xpZp9euPn/83H6qNDY/+DzfNSofwDWYGmBKz70PQAAAABJRU5ErkJg
-        gg==
 </value>
   </data>
   <data name="eui_cmdAllegaFile.SmallImages.Images" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -4729,5 +4729,8 @@
   </data>
   <metadata name="eui_Informazioni.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>169, 17</value>
   </metadata>
 </root>
